--- a/sandbox.html
+++ b/sandbox.html
@@ -4,16 +4,25 @@
     <meta charset="utf-8">
     <title>Sandbox 🏖</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="lib/jquery_lite.js"></script>
+    <script type="text/javascript"src="lib/jskingdom.js"></script>
   </head>
   <body>
 
-    <div class="first-box">
-      <div class="second-box">
+    <div class="first-box" style="
+    width: 100px;
+    height: 100px;
+    background-color: blue;">
+      <div class="second-box" style="
+      width: 25px;
+      height: 25px;
+      background-color: red;">
       </div>
     </div>
 
-    <div class="third-box">
+    <div class="third-box"style="
+    width: 50px;
+    height: 50px;
+    background-color: yellow;">
     </div>
 
     <ul id="link-list">
