--- a/sandbox.html
+++ b/sandbox.html
@@ -26,7 +26,7 @@
     </div>
 
     <ul id="link-list">
-      <li><a href="https://github.com/appacademy/curriculum/tree/master/javascript/projects/jquery_lite">Instructions</a></li>
+      <li><a href="https://github.com/heinhtetPS/JSKingdom">How do I use this?</a></li>
       <li>Item 2</li>
       <li>Item 3</li>
     </ul>
