add more css to main page and wrote up beginning of readme

--- a/sandbox.html
+++ b/sandbox.html
@@ -7,28 +7,40 @@
     <script type="text/javascript"src="lib/jskingdom.js"></script>
   </head>
   <body>
+    <h1 style="text-align: center;">Welcome to your JSKingDOM sandbox</h1>
+    <div className="page-container" style="
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;">
 
-    <div class="first-box" style="
-    width: 100px;
-    height: 100px;
-    background-color: blue;">
-      <div class="second-box" style="
-      width: 25px;
-      height: 25px;
-      background-color: red;">
+      <div class="first-box" style="
+      width: 100px;
+      height: 100px;
+      background-color: blue;">
+        <div class="second-box" style="
+        width: 25px;
+        height: 25px;
+        background-color: red;">
+        </div>
       </div>
-    </div>
 
-    <div class="third-box"style="
-    width: 50px;
-    height: 50px;
-    background-color: yellow;">
-    </div>
+      <div class="third-box"style="
+      width: 50px;
+      height: 50px;
+      background-color: yellow;">
+      </div>
 
-    <ul id="link-list">
-      <li><a href="https://github.com/heinhtetPS/JSKingdom">How do I use this?</a></li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ul>
+      <ul id="link-list">
+        <li><a href="https://github.com/heinhtetPS/JSKingdom">How do I use this?</a></li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+      </ul>
+      <canvas className="canvas" id="canvas" style="
+      width: 400px;
+      height: 300px;
+      background-color: black;"></canvas>
+
+    </div>
   </body>
 </html>
