add notes for change, remove useless items

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sandbox 🏖</title>
+    <title>JSKingDOM Sandbox</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript"src="lib/jskingdom.js"></script>
   </head>
@@ -36,10 +36,13 @@
         <li>Item 3</li>
         <li>Item 4</li>
       </ul>
-      <canvas className="canvas" id="canvas" style="
-      width: 400px;
+
+      <div class="weatherbox" style="
+      width: 300px;
       height: 300px;
-      background-color: black;"></canvas>
+      background-color: gainsboro;">
+
+      </div>
 
     </div>
   </body>
